fix alignment and spacing

--- a/src/less/App.less
+++ b/src/less/App.less
@@ -174,6 +174,8 @@ header .drawer {
     display:flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .qrcode {
